syntax = "proto3";

package ImageClassifierGrpc;

message ImageClassificationRequest {
    bytes imageData = 1;
    string classifierType = 2;
}

message ImageClassificationResponse {
    string label = 1;
}

service ImageClassificationService {
    rpc ClassifyImage (ImageClassificationRequest) returns (ImageClassificationResponse) {
    }
}
